@@ -4,5 +4,10 @@ History of jquery.pyproxy
 0.1 (unreleased)
 ----------------
 
+- added basic javascript calls. [vincent]
+
+- added JQueryProxy Python class and decorators for plone and
+  Django. [vincent]
+
 - added log file + python egg. [vincent]
 
